--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,25 @@
 
     <body>
         <main class="container">
+            <!-- <table>
+                <tr>
+                    <td>Food</td>
+                    <td>Quantity</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+            </table> -->
             <div class="messages"></div>
         </main>
 
